--- a/Audience.ioc
+++ b/Audience.ioc
@@ -14,83 +14,45 @@ CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_256B
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_16KB
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_TEX_LEVEL1
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.Request2=SPI2_RX
-Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Stream0
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.EventEnable=DISABLE
-Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.1.Instance=DMA1_Stream1
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.1.RequestNumber=1
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.1.SignalID=NONE
-Dma.SPI1_TX.1.SyncEnable=DISABLE
-Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.1.SyncRequestNumber=1
-Dma.SPI1_TX.1.SyncSignalID=NONE
-Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.2.EventEnable=DISABLE
-Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.2.Instance=DMA1_Stream2
-Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.2.Mode=DMA_NORMAL
-Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI2_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.SPI2_RX.2.RequestNumber=1
-Dma.SPI2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI2_RX.2.SignalID=NONE
-Dma.SPI2_RX.2.SyncEnable=DISABLE
-Dma.SPI2_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI2_RX.2.SyncRequestNumber=1
-Dma.SPI2_RX.2.SyncSignalID=NONE
-Dma.SPI2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.3.EventEnable=DISABLE
-Dma.SPI2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_TX.3.Instance=DMA1_Stream3
-Dma.SPI2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.3.Mode=DMA_NORMAL
-Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI2_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.SPI2_TX.3.RequestNumber=1
-Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI2_TX.3.SignalID=NONE
-Dma.SPI2_TX.3.SyncEnable=DISABLE
-Dma.SPI2_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI2_TX.3.SyncRequestNumber=1
-Dma.SPI2_TX.3.SyncSignalID=NONE
+Dma.Request0=SPI2_RX
+Dma.Request1=SPI2_TX
+Dma.RequestsNb=2
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.EventEnable=DISABLE
+Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Stream2
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.0.RequestNumber=1
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.0.SignalID=NONE
+Dma.SPI2_RX.0.SyncEnable=DISABLE
+Dma.SPI2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.0.SyncRequestNumber=1
+Dma.SPI2_RX.0.SyncSignalID=NONE
+Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.1.EventEnable=DISABLE
+Dma.SPI2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.1.Instance=DMA1_Stream3
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.1.Mode=DMA_NORMAL
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.1.RequestNumber=1
+Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_TX.1.SignalID=NONE
+Dma.SPI2_TX.1.SyncEnable=DISABLE
+Dma.SPI2_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_TX.1.SyncRequestNumber=1
+Dma.SPI2_TX.1.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface,MACAddr
 ETH.MACAddr=42\:42\:42\:12\:34\:56
 ETH.MediaInterface=HAL_ETH_RMII_MODE
@@ -118,6 +80,8 @@ Mcu.CPN=STM32H743ZIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
@@ -126,50 +90,43 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI2
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=10
+Mcu.IPNb=12
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF0
-Mcu.Pin1=PF1
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB10
-Mcu.Pin18=PB11
-Mcu.Pin19=PB12
-Mcu.Pin2=PF3
-Mcu.Pin20=PB13
-Mcu.Pin21=PD0
-Mcu.Pin22=PD1
-Mcu.Pin23=PD2
-Mcu.Pin24=PD3
-Mcu.Pin25=PD4
-Mcu.Pin26=PD5
-Mcu.Pin27=PD7
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_LWIP_VS_Enabled
-Mcu.Pin3=PF4
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIM1_VS_no_output1
-Mcu.Pin4=PH0-OSC_IN (PH0)
-Mcu.Pin5=PH1-OSC_OUT (PH1)
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2_C
-Mcu.Pin8=PC3_C
-Mcu.Pin9=PA1
-Mcu.PinsNb=32
+Mcu.Pin0=PH0-OSC_IN (PH0)
+Mcu.Pin1=PH1-OSC_OUT (PH1)
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PD3
+Mcu.Pin17=PD6
+Mcu.Pin18=PD7
+Mcu.Pin19=PG9
+Mcu.Pin2=PC1
+Mcu.Pin20=PG10
+Mcu.Pin21=PG11
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_LWIP_VS_Enabled
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_no_output1
+Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PB11
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -177,9 +134,9 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -189,6 +146,10 @@ PA1.GPIOParameters=GPIO_Speed
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA2.GPIOParameters=GPIO_Speed
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Mode=RMII
@@ -199,16 +160,10 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.PinState=GPIO_PIN_SET
 PA3.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
 PB11.GPIOParameters=GPIO_Speed
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB11.Mode=RMII
@@ -221,20 +176,26 @@ PB13.GPIOParameters=GPIO_Speed
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
-PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB9.GPIO_Label=ETH_RX_ER
-PB9.GPIO_PuPd=GPIO_PULLDOWN
+PB14.GPIOParameters=GPIO_Speed
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Speed
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB9.GPIO_Label=CS2
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Speed
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC2_C.Mode=Full_Duplex_Master
-PC2_C.Signal=SPI2_MISO
-PC3_C.Locked=true
-PC3_C.Mode=Full_Duplex_Master
-PC3_C.Signal=SPI2_MOSI
 PC4.GPIOParameters=GPIO_Speed
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.Mode=RMII
@@ -243,69 +204,38 @@ PC5.GPIOParameters=GPIO_Speed
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PD0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD0.GPIO_Label=DISPLAY_RS
-PD0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD0.Locked=true
-PD0.PinState=GPIO_PIN_RESET
-PD0.Signal=GPIO_Output
-PD1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD1.GPIO_Label=DISPLAY_E
-PD1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD1.Locked=true
-PD1.PinState=GPIO_PIN_RESET
-PD1.Signal=GPIO_Output
-PD2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD2.GPIO_Label=DISPLAY_D4
-PD2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD2.Locked=true
-PD2.PinState=GPIO_PIN_RESET
-PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD3.GPIO_Label=DISPLAY_D5
+PD3.GPIOParameters=GPIO_Speed
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
-PD3.PinState=GPIO_PIN_RESET
-PD3.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD4.GPIO_Label=DISPLAY_D6
-PD4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD4.Locked=true
-PD4.PinState=GPIO_PIN_RESET
-PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PD5.GPIO_Label=DISPLAY_D7
-PD5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD5.Locked=true
-PD5.PinState=GPIO_PIN_RESET
-PD5.Signal=GPIO_Output
+PD3.Mode=Full_Duplex_Master
+PD3.Signal=SPI2_SCK
+PD6.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PD6.GPIO_Label=LDAC
+PD6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PD6.Locked=true
+PD6.PinState=GPIO_PIN_SET
+PD6.Signal=GPIO_Output
+PD7.GPIOParameters=GPIO_Speed
+PD7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD7.Locked=true
 PD7.Mode=Full_Duplex_Master
 PD7.Signal=SPI1_MOSI
-PF0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PF0.GPIO_Label=LDAC2
-PF0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF0.Locked=true
-PF0.PinState=GPIO_PIN_SET
-PF0.Signal=GPIO_Output
-PF1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PF1.GPIO_Label=LDAC1
-PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF1.Locked=true
-PF1.PinState=GPIO_PIN_SET
-PF1.Signal=GPIO_Output
-PF3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PF3.GPIO_Label=SPI2_CS
-PF3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF3.Locked=true
-PF3.PinState=GPIO_PIN_SET
-PF3.Signal=GPIO_Output
-PF4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PF4.GPIO_Label=SPI1_CS
-PF4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF4.Locked=true
-PF4.PinState=GPIO_PIN_SET
-PF4.Signal=GPIO_Output
+PG10.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PG10.GPIO_Label=CS1
+PG10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PG10.Locked=true
+PG10.PinState=GPIO_PIN_SET
+PG10.Signal=GPIO_Output
+PG11.GPIOParameters=GPIO_Speed
+PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PG11.Locked=true
+PG11.Mode=Full_Duplex_Master
+PG11.Signal=SPI1_SCK
+PG9.GPIOParameters=GPIO_Speed
+PG9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PG9.Locked=true
+PG9.Mode=Full_Duplex_Master
+PG9.Signal=SPI1_MISO
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -338,7 +268,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_TIM1_Init-TIM1-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_TIM1_Init-TIM1-false-LL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -380,7 +310,7 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=8000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -412,22 +342,23 @@ RCC.Tim2OutputFreq_Value=240000000
 RCC.TraceFreq_Value=64000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
-RCC.USBFreq_Value=120000000
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
+RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=32250000
 RCC.VCO3OutputFreq_Value=32250000
 RCC.VCOInput1Freq_Value=4000000
 RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=250000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=30.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CalculateBaudRate=937.5 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=30.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CalculateBaudRate=937.5 KBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
@@ -437,11 +368,22 @@ TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
 TIM1.Period=1
 TIM1.Prescaler=624
+USB_DEVICE.CLASS_NAME_FS=AUDIO
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-AUDIO_FS,MANUFACTURER_STRING-AUDIO_FS,PRODUCT_STRING_AUDIO_FS,USBD_DEBUG_LEVEL-AUDIO_FS
+USB_DEVICE.MANUFACTURER_STRING-AUDIO_FS=Skrrmrchoh
+USB_DEVICE.PRODUCT_STRING_AUDIO_FS=Audience
+USB_DEVICE.USBD_DEBUG_LEVEL-AUDIO_FS=0
+USB_DEVICE.VirtualMode-AUDIO_FS=Audio
+USB_DEVICE.VirtualModeFS=Audio_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
+VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
+VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
 isbadioc=false
