--- a/Audience.ioc
+++ b/Audience.ioc
@@ -16,7 +16,45 @@ CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_16
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_TEX_LEVEL1
 Dma.Request0=SPI2_RX
 Dma.Request1=SPI2_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI1_RX
+Dma.Request3=SPI1_TX
+Dma.RequestsNb=4
+Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.2.EventEnable=DISABLE
+Dma.SPI1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.2.Instance=DMA1_Stream0
+Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.2.Mode=DMA_NORMAL
+Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.2.RequestNumber=1
+Dma.SPI1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.2.SignalID=NONE
+Dma.SPI1_RX.2.SyncEnable=DISABLE
+Dma.SPI1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.2.SyncRequestNumber=1
+Dma.SPI1_RX.2.SyncSignalID=NONE
+Dma.SPI1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.3.EventEnable=DISABLE
+Dma.SPI1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.3.Instance=DMA1_Stream1
+Dma.SPI1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.3.Mode=DMA_NORMAL
+Dma.SPI1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.3.RequestNumber=1
+Dma.SPI1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.3.SignalID=NONE
+Dma.SPI1_TX.3.SyncEnable=DISABLE
+Dma.SPI1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.3.SyncRequestNumber=1
+Dma.SPI1_TX.3.SyncSignalID=NONE
 Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.0.EventEnable=DISABLE
 Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -127,6 +165,8 @@ Mcu.UserName=STM32H743ZITx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -137,6 +177,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -268,8 +309,8 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_TIM1_Init-TIM1-false-LL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=16125000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_TIM1_Init-TIM1-false-LL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
 RCC.APB1Freq_Value=120000000
@@ -286,28 +327,28 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=120000000
+RCC.DFSDMACLkFreq_Value=96000000
 RCC.DFSDMFreq_Value=120000000
-RCC.DIVM1=2
-RCC.DIVN1=240
+RCC.DIVM1=5
+RCC.DIVN1=192
 RCC.DIVP1Freq_Value=480000000
-RCC.DIVP2Freq_Value=16125000
-RCC.DIVP3Freq_Value=16125000
-RCC.DIVQ1=8
-RCC.DIVQ1Freq_Value=120000000
-RCC.DIVQ2Freq_Value=16125000
-RCC.DIVQ3Freq_Value=16125000
+RCC.DIVP2Freq_Value=50390625
+RCC.DIVP3Freq_Value=50390625
+RCC.DIVQ1=10
+RCC.DIVQ1Freq_Value=96000000
+RCC.DIVQ2Freq_Value=50390625
+RCC.DIVQ3Freq_Value=50390625
 RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2Freq_Value=16125000
-RCC.DIVR3Freq_Value=16125000
-RCC.FDCANFreq_Value=120000000
+RCC.DIVR2Freq_Value=50390625
+RCC.DIVR3Freq_Value=50390625
+RCC.FDCANFreq_Value=96000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
 RCC.HCLKFreq_Value=240000000
 RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=240000000
-RCC.HSE_VALUE=8000000
+RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
 RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
@@ -315,7 +356,7 @@ RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
 RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=16125000
+RCC.LTDCFreq_Value=50390625
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=480000000
 RCC.PLL2FRACN=0
@@ -325,13 +366,13 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=120000000
-RCC.SAI23Freq_Value=120000000
-RCC.SAI4AFreq_Value=120000000
-RCC.SAI4BFreq_Value=120000000
-RCC.SDMMCFreq_Value=120000000
-RCC.SPDIFRXFreq_Value=120000000
-RCC.SPI123Freq_Value=120000000
+RCC.SAI1Freq_Value=96000000
+RCC.SAI23Freq_Value=96000000
+RCC.SAI4AFreq_Value=96000000
+RCC.SAI4BFreq_Value=96000000
+RCC.SDMMCFreq_Value=96000000
+RCC.SPDIFRXFreq_Value=96000000
+RCC.SPI123Freq_Value=96000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
@@ -345,20 +386,20 @@ RCC.USART234578Freq_Value=120000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=32250000
-RCC.VCO3OutputFreq_Value=32250000
-RCC.VCOInput1Freq_Value=4000000
-RCC.VCOInput2Freq_Value=250000
-RCC.VCOInput3Freq_Value=250000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI1.CalculateBaudRate=937.5 KBits/s
+RCC.VCO2OutputFreq_Value=100781250
+RCC.VCO3OutputFreq_Value=100781250
+RCC.VCOInput1Freq_Value=5000000
+RCC.VCOInput2Freq_Value=781250
+RCC.VCOInput3Freq_Value=781250
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=24.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI2.CalculateBaudRate=937.5 KBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=24.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
