--- a/Audience.ioc
+++ b/Audience.ioc
@@ -149,8 +149,9 @@ Mcu.Pin21=PG11
 Mcu.Pin22=PB9
 Mcu.Pin23=VP_LWIP_VS_Enabled
 Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_no_output1
-Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM1_VS_no_output1
+Mcu.Pin27=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -158,7 +159,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB11
-Mcu.PinsNb=27
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -310,105 +311,106 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-LL-true,5-MX_SPI2_Init-SPI2-false-LL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_TIM1_Init-TIM1-false-LL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=50390625
-RCC.AHB12Freq_Value=240000000
-RCC.AHB4Freq_Value=240000000
-RCC.APB1Freq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=240000000
+RCC.ADCFreq_Value=33024000
+RCC.AHB12Freq_Value=192000000
+RCC.AHB4Freq_Value=192000000
+RCC.APB1Freq_Value=96000000
+RCC.APB2Freq_Value=96000000
+RCC.APB3Freq_Value=96000000
+RCC.APB4Freq_Value=96000000
+RCC.AXIClockFreq_Value=192000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=480000000
-RCC.CpuClockFreq_Value=480000000
-RCC.D1CPREFreq_Value=480000000
+RCC.CortexFreq_Value=384000000
+RCC.CpuClockFreq_Value=384000000
+RCC.D1CPREFreq_Value=384000000
 RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=96000000
-RCC.DFSDMFreq_Value=120000000
-RCC.DIVM1=5
-RCC.DIVN1=192
-RCC.DIVP1Freq_Value=480000000
-RCC.DIVP2Freq_Value=50390625
-RCC.DIVP3Freq_Value=50390625
-RCC.DIVQ1=10
-RCC.DIVQ1Freq_Value=96000000
-RCC.DIVQ2Freq_Value=50390625
-RCC.DIVQ3Freq_Value=50390625
-RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2Freq_Value=50390625
-RCC.DIVR3Freq_Value=50390625
-RCC.FDCANFreq_Value=96000000
-RCC.FMCFreq_Value=240000000
+RCC.DFSDMACLkFreq_Value=192000000
+RCC.DFSDMFreq_Value=96000000
+RCC.DIVM1=8
+RCC.DIVN1=375
+RCC.DIVP1Freq_Value=384000000
+RCC.DIVP2Freq_Value=33024000
+RCC.DIVP3Freq_Value=33024000
+RCC.DIVQ1=4
+RCC.DIVQ1Freq_Value=192000000
+RCC.DIVQ2Freq_Value=33024000
+RCC.DIVQ3Freq_Value=33024000
+RCC.DIVR1Freq_Value=384000000
+RCC.DIVR2Freq_Value=33024000
+RCC.DIVR3Freq_Value=33024000
+RCC.FDCANFreq_Value=192000000
+RCC.FMCFreq_Value=192000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=240000000
-RCC.HCLKFreq_Value=240000000
+RCC.HCLK3ClockFreq_Value=192000000
+RCC.HCLKFreq_Value=192000000
 RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=240000000
-RCC.HSE_VALUE=25000000
-RCC.I2C123Freq_Value=120000000
-RCC.I2C4Freq_Value=120000000
+RCC.HRTIMFreq_Value=192000000
+RCC.HSE_VALUE=16384000
+RCC.I2C123Freq_Value=96000000
+RCC.I2C4Freq_Value=96000000
 RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=120000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=50390625
+RCC.LPTIM1Freq_Value=96000000
+RCC.LPTIM2Freq_Value=96000000
+RCC.LPTIM345Freq_Value=96000000
+RCC.LPUART1Freq_Value=96000000
+RCC.LTDCFreq_Value=33024000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=480000000
+RCC.MCO2PinFreq_Value=384000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=240000000
+RCC.QSPIFreq_Value=192000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=96000000
-RCC.SAI23Freq_Value=96000000
-RCC.SAI4AFreq_Value=96000000
-RCC.SAI4BFreq_Value=96000000
-RCC.SDMMCFreq_Value=96000000
-RCC.SPDIFRXFreq_Value=96000000
-RCC.SPI123Freq_Value=96000000
-RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
-RCC.SWPMI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=480000000
+RCC.SAI1Freq_Value=192000000
+RCC.SAI23Freq_Value=192000000
+RCC.SAI4AFreq_Value=192000000
+RCC.SAI4BFreq_Value=192000000
+RCC.SDMMCFreq_Value=192000000
+RCC.SPDIFRXFreq_Value=192000000
+RCC.SPI123Freq_Value=192000000
+RCC.SPI45Freq_Value=96000000
+RCC.SPI6Freq_Value=96000000
+RCC.SWPMI1Freq_Value=96000000
+RCC.SYSCLKFreq_VALUE=384000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=240000000
-RCC.Tim2OutputFreq_Value=240000000
+RCC.Tim1OutputFreq_Value=192000000
+RCC.Tim2OutputFreq_Value=192000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=120000000
-RCC.USART234578Freq_Value=120000000
+RCC.USART16Freq_Value=96000000
+RCC.USART234578Freq_Value=96000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
-RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=100781250
-RCC.VCO3OutputFreq_Value=100781250
-RCC.VCOInput1Freq_Value=5000000
-RCC.VCOInput2Freq_Value=781250
-RCC.VCOInput3Freq_Value=781250
+RCC.VCO1OutputFreq_Value=768000000
+RCC.VCO2OutputFreq_Value=66048000
+RCC.VCO3OutputFreq_Value=66048000
+RCC.VCOInput1Freq_Value=2048000
+RCC.VCOInput2Freq_Value=512000
+RCC.VCOInput3Freq_Value=512000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=24.0 MBits/s
+SPI1.CalculateBaudRate=48.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=24.0 MBits/s
+SPI2.CalculateBaudRate=48.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
-TIM1.Period=1
-TIM1.Prescaler=624
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV2
+TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period,ClockDivision
+TIM1.Period=9
+TIM1.Prescaler=99
 USB_DEVICE.CLASS_NAME_FS=AUDIO
 USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-AUDIO_FS,MANUFACTURER_STRING-AUDIO_FS,PRODUCT_STRING_AUDIO_FS,USBD_DEBUG_LEVEL-AUDIO_FS
 USB_DEVICE.MANUFACTURER_STRING-AUDIO_FS=Skrrmrchoh
@@ -422,6 +424,8 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
