--- a/Audience.ioc
+++ b/Audience.ioc
@@ -137,21 +137,23 @@ Mcu.Pin10=PB12
 Mcu.Pin11=PB13
 Mcu.Pin12=PB14
 Mcu.Pin13=PB15
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PD3
-Mcu.Pin17=PD6
-Mcu.Pin18=PD7
-Mcu.Pin19=PG9
+Mcu.Pin14=PD13
+Mcu.Pin15=PG2
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PD3
+Mcu.Pin19=PD6
 Mcu.Pin2=PC1
-Mcu.Pin20=PG10
-Mcu.Pin21=PG11
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_LWIP_VS_Enabled
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM1_VS_no_output1
-Mcu.Pin27=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin20=PD7
+Mcu.Pin21=PG9
+Mcu.Pin22=PG10
+Mcu.Pin23=PG11
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_LWIP_VS_Enabled
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM1_VS_no_output1
+Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -159,7 +161,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB11
-Mcu.PinsNb=28
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -246,6 +248,12 @@ PC5.GPIOParameters=GPIO_Speed
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PD13.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PD13.GPIO_Label=LED_RED
+PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PD13.Locked=true
+PD13.PinState=GPIO_PIN_SET
+PD13.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Speed
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
@@ -273,6 +281,12 @@ PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG11.Locked=true
 PG11.Mode=Full_Duplex_Master
 PG11.Signal=SPI1_SCK
+PG2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PG2.GPIO_Label=LED_GREEN
+PG2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PG2.Locked=true
+PG2.PinState=GPIO_PIN_SET
+PG2.Signal=GPIO_Output
 PG9.GPIOParameters=GPIO_Speed
 PG9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG9.Locked=true
